mod power in info page

--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -235,7 +235,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
     </HyperlinkButton>
     <StackPanel Orientation="Horizontal">
       <TextBlock xmlns:et="using:EhTagClient"
-                 Text="{x:Bind et:Client.LastUpdate, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/AboutControl/LastUpdate'}"
+                 Text="{x:Bind et:Client.LastUpdate, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='ms-resource:Controls/AboutControl/LastUpdate'}"
                  Style="{StaticResource AboutControlCaptionTextBlockStyle}" />
       <Button x:Name="btnUpdateEt"
               x:Uid="Controls/AboutControl/UpdateButton"
@@ -254,7 +254,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                      Style="{StaticResource AboutControlHyperLinkButtonStyle}" />
     <StackPanel Orientation="Horizontal">
       <TextBlock xmlns:eht="using:EhTagTranslatorClient"
-                 Text="{x:Bind eht:Client.LastUpdate, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='Controls/AboutControl/LastUpdate'}"
+                 Text="{x:Bind eht:Client.LastUpdate, Converter={StaticResource DateTimeOffsetToStringConverter}, ConverterParameter='ms-resource:Controls/AboutControl/LastUpdate'}"
                  Style="{StaticResource AboutControlCaptionTextBlockStyle}" />
       <Button x:Name="btnUpdateEht"
               x:Uid="Controls/AboutControl/UpdateButton"
