--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ExViewer.Controls"
+             xmlns:client="using:ExClient"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
@@ -155,7 +156,7 @@
                  RelativePanel.AlignRightWithPanel="True"
                  RelativePanel.AlignTopWithPanel="True"
                  RelativePanel.Above="CategoryTag"
-                 Text="{x:Bind Gallery, Converter={StaticResource GalleryToTitleStringConverter}, Mode=OneWay}"
+                 Text="{x:Bind client:GalleryExtension.GetDisplayTitle(Gallery), Mode=OneWay}"
                  Style="{StaticResource SubtitleTextBlockStyle}"
                  TextWrapping="WrapWholeWords"
                  MaxLines="3"
@@ -164,7 +165,7 @@
                 <ToolTipService.ToolTip>
                     <ToolTip x:Name="TitleToolTop"
                              IsEnabled="{x:Bind TitleTextBlock.IsTextTrimmed, Mode=OneWay}">
-                        <TextBlock Text="{x:Bind Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
+                        <TextBlock Text="{x:Bind client:GalleryExtension.GetDisplayTitle(Gallery), Mode=OneWay}"
                                    TextWrapping="WrapWholeWords" />
                     </ToolTip>
                 </ToolTipService.ToolTip>
